manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: tutorial
  labels:
    app: app1
spec:
  replicas: 1
  minReadySeconds: 10
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: gcr.io/[PROJECT_ID]/hands-on-app-1:v1
        ports:
        - containerPort: 8888
          protocol: TCP
