manifests/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: tutorial
  labels:
    app: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app1
        image: gcr.io/[PROJECT_ID]/hands-on-app-2:v1
        ports:
        - containerPort: 8080
