manifests/service2.yaml
kind: Service
apiVersion: v1
metadata:
  name: app2-service
  namespace: tutorial
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: app2
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8080
